--- a/.github/workflows/create_repo.yaml
+++ b/.github/workflows/create_repo.yaml
@@ -41,7 +41,7 @@ jobs:
                   {
                     "title": "create repo result ${{ steps.create-repo.outcome }}",
                     "short": true,
-                    "value": "${{ inputs.prefix }}"-${{ inputs.name }}"
+                    "value": "${{ inputs.prefix }}-${{ inputs.name }}"
                   }
                 ]
               }
