--- a/.github/workflows/issue_notify.yaml
+++ b/.github/workflows/issue_notify.yaml
@@ -44,7 +44,7 @@ jobs:
                 "color": "28a745",
                 "fileds": [
                   {
-                    title: "Level: ${{ needs.get-keyword.outputs.level }}",
+                    "title": "Level: ${{ needs.get-keyword.outputs.level }}",
                     "short": true,
                     "value": "issue url: ${{ github.event.issue.html_url }}"
                   }
