--- a/.github/workflows/issue_notify.yaml
+++ b/.github/workflows/issue_notify.yaml
@@ -32,6 +32,7 @@ jobs:
     if: needs.get-keyword.outputs.level != 'Undefined'
     runs-on: ubuntu-latest
     # environment: ${{ needs.get-keyword.outputs.level }} // 어떤 environment인지 알 수 없음
+    # matrix를 사용하면 어떤 environment인지 볼 수 있다. 결과는 동일하고, 시각적으로만 차이가 있는 것이다.
     strategy:
       matrix:
         environment: ["${{ needs.get-keyword.outputs.level }}"]
