--- a/.github/workflows/cicd-1.yaml
+++ b/.github/workflows/cicd-1.yaml
@@ -1,7 +1,7 @@
 name: cicd-1
 on:
   pull_request:
-    types: [opend, synchronize, closed]
+    types: [opened, synchronize, closed]
     branches: [dev]
     paths:
     - 'my-app/**'
